--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -46,6 +46,11 @@
           <height>0</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>Bahnschrift</family>
+         </font>
+        </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
@@ -148,8 +153,8 @@
                     <widget class="QLabel" name="label_12">
                      <property name="font">
                       <font>
-                       <family>Segoe UI Semibold</family>
-                       <pointsize>13</pointsize>
+                       <family>Bahnschrift</family>
+                       <pointsize>16</pointsize>
                        <italic>false</italic>
                        <underline>false</underline>
                       </font>
@@ -195,8 +200,8 @@
                      </property>
                      <property name="font">
                       <font>
-                       <family>Segoe UI Semibold</family>
-                       <pointsize>12</pointsize>
+                       <family>Bahnschrift</family>
+                       <pointsize>14</pointsize>
                        <italic>true</italic>
                       </font>
                      </property>
@@ -236,7 +241,7 @@
                       <x>0</x>
                       <y>0</y>
                       <width>624</width>
-                      <height>1300</height>
+                      <height>1243</height>
                      </rect>
                     </property>
                     <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -264,8 +269,8 @@
                          </property>
                          <property name="font">
                           <font>
-                           <family>Segoe UI Semibold</family>
-                           <pointsize>12</pointsize>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>14</pointsize>
                            <italic>true</italic>
                           </font>
                          </property>
@@ -306,6 +311,12 @@
                            <width>25</width>
                            <height>25</height>
                           </size>
+                         </property>
+                         <property name="font">
+                          <font>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>16</pointsize>
+                          </font>
                          </property>
                          <property name="text">
                           <string>v</string>
@@ -356,6 +367,11 @@
                            <height>25</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
+                         </property>
                          <property name="tabletTracking">
                           <bool>false</bool>
                          </property>
@@ -397,8 +413,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                             <underline>false</underline>
                            </font>
@@ -450,6 +466,12 @@
                                  <height>16777215</height>
                                 </size>
                                </property>
+                               <property name="font">
+                                <font>
+                                 <family>Bahnschrift</family>
+                                 <pointsize>14</pointsize>
+                                </font>
+                               </property>
                                <property name="text">
                                 <string>Position:</string>
                                </property>
@@ -471,6 +493,11 @@
                                  <width>111</width>
                                  <height>16777215</height>
                                 </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <pointsize>14</pointsize>
+                                </font>
                                </property>
                                <property name="decimals">
                                 <number>6</number>
@@ -499,7 +526,8 @@
                                </property>
                                <property name="font">
                                 <font>
-                                 <family>Segoe UI Semibold</family>
+                                 <family>Bahnschrift SemiBold</family>
+                                 <pointsize>14</pointsize>
                                 </font>
                                </property>
                                <property name="text">
@@ -543,8 +571,8 @@
                                </property>
                                <property name="font">
                                 <font>
-                                 <family>Segoe UI Semibold</family>
-                                 <pointsize>12</pointsize>
+                                 <family>Bahnschrift SemiBold</family>
+                                 <pointsize>14</pointsize>
                                  <underline>false</underline>
                                 </font>
                                </property>
@@ -568,8 +596,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -810,8 +838,8 @@
                          </property>
                          <property name="font">
                           <font>
-                           <family>Segoe UI Semibold</family>
-                           <pointsize>12</pointsize>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>14</pointsize>
                            <italic>true</italic>
                           </font>
                          </property>
@@ -850,6 +878,12 @@
                            <height>25</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>16</pointsize>
+                          </font>
+                         </property>
                          <property name="text">
                           <string>v</string>
                          </property>
@@ -873,6 +907,11 @@
                        </property>
                        <item>
                         <widget class="QFrame" name="frame_6">
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
+                         </property>
                          <property name="frameShape">
                           <enum>QFrame::StyledPanel</enum>
                          </property>
@@ -883,6 +922,11 @@
                        </item>
                        <item>
                         <widget class="QFrame" name="frame_5">
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
+                         </property>
                          <property name="frameShape">
                           <enum>QFrame::StyledPanel</enum>
                          </property>
@@ -898,6 +942,11 @@
                            <width>0</width>
                            <height>25</height>
                           </size>
+                         </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
                          </property>
                         </widget>
                        </item>
@@ -934,8 +983,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -1067,8 +1116,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -1208,8 +1257,8 @@
                          </property>
                          <property name="font">
                           <font>
-                           <family>Segoe UI Semibold</family>
-                           <pointsize>12</pointsize>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>14</pointsize>
                            <italic>true</italic>
                           </font>
                          </property>
@@ -1248,6 +1297,12 @@
                            <height>25</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>16</pointsize>
+                          </font>
+                         </property>
                          <property name="text">
                           <string>v</string>
                          </property>
@@ -1277,6 +1332,11 @@
                            <height>25</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
+                         </property>
                         </widget>
                        </item>
                        <item>
@@ -1287,6 +1347,11 @@
                            <height>25</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
+                         </property>
                         </widget>
                        </item>
                        <item>
@@ -1296,6 +1361,11 @@
                            <width>0</width>
                            <height>25</height>
                           </size>
+                         </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
                          </property>
                         </widget>
                        </item>
@@ -1332,8 +1402,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -1687,8 +1757,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -1742,6 +1812,11 @@
                                  <width>175</width>
                                  <height>0</height>
                                 </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <pointsize>14</pointsize>
+                                </font>
                                </property>
                               </widget>
                              </item>
@@ -1981,8 +2056,8 @@
                          </property>
                          <property name="font">
                           <font>
-                           <family>Segoe UI Semibold</family>
-                           <pointsize>12</pointsize>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>14</pointsize>
                            <italic>true</italic>
                           </font>
                          </property>
@@ -2020,6 +2095,12 @@
                            <width>25</width>
                            <height>25</height>
                           </size>
+                         </property>
+                         <property name="font">
+                          <font>
+                           <family>Bahnschrift SemiBold</family>
+                           <pointsize>16</pointsize>
+                          </font>
                          </property>
                          <property name="text">
                           <string>v</string>
@@ -2070,6 +2151,11 @@
                            <height>25</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>14</pointsize>
+                          </font>
+                         </property>
                         </widget>
                        </item>
                       </layout>
@@ -2105,8 +2191,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -2258,8 +2344,8 @@
                           </property>
                           <property name="font">
                            <font>
-                            <family>Segoe UI Semibold</family>
-                            <pointsize>12</pointsize>
+                            <family>Bahnschrift</family>
+                            <pointsize>14</pointsize>
                             <italic>false</italic>
                            </font>
                           </property>
@@ -2514,6 +2600,11 @@
                   <height>0</height>
                  </size>
                 </property>
+                <property name="font">
+                 <font>
+                  <pointsize>14</pointsize>
+                 </font>
+                </property>
                 <property name="frameShape">
                  <enum>QFrame::Box</enum>
                 </property>
@@ -2545,8 +2636,8 @@
                      </property>
                      <property name="font">
                       <font>
-                       <family>Segoe UI Semibold</family>
-                       <pointsize>13</pointsize>
+                       <family>Bahnschrift</family>
+                       <pointsize>14</pointsize>
                        <weight>50</weight>
                        <italic>false</italic>
                        <bold>false</bold>
@@ -2581,8 +2672,8 @@
                      </property>
                      <property name="font">
                       <font>
-                       <family>Segoe UI Semibold</family>
-                       <pointsize>12</pointsize>
+                       <family>Bahnschrift</family>
+                       <pointsize>14</pointsize>
                        <italic>true</italic>
                       </font>
                      </property>
@@ -2601,8 +2692,8 @@
                      </property>
                      <property name="font">
                       <font>
-                       <family>Segoe UI Semibold</family>
-                       <pointsize>12</pointsize>
+                       <family>Bahnschrift</family>
+                       <pointsize>14</pointsize>
                        <italic>true</italic>
                       </font>
                      </property>
